# hexa

./: .gitignore  Dockerfile  README.md  start.sh
.github/workflows/: docker-image.yml
be/: Cargo.toml  Dockerfile  docker.sh  start.sh
be/common/: Cargo.toml
be/common/src/: error.rs  lib.rs
be/core/: Cargo.toml
be/core/src/: main.rs
be/core/src/datasource/: connector.rs  error.rs  manager.rs  mod.rs  mysql.rs  postgres.rs
be/core/src/execution/: mod.rs
be/core/src/execution/physical_plan/: mod.rs  sql_scan.rs
be/proto/: Cargo.toml  build.rs
be/proto/src/protos/: execute.rs  mod.rs
be/src/common/: Cargo.toml
be/src/common/src/: lib.rs  macros.rs  timer.rs
be/src/core/: Cargo.toml
be/src/core/src/: lib.rs  main.rs
be/src/core/src/datasource/: connector.rs  error.rs  manager.rs  mod.rs  mysql.rs  postgres.rs  utils.rs
be/src/core/src/datasource/common/: accessor.rs  macros.rs  meta.rs  mod.rs  pool.rs  utils.rs
be/src/core/src/datasource/dispatch/: mod.rs
be/src/core/src/datasource/mysql/: error.rs  mod.rs
be/src/core/src/datasource/postgres/: error.rs  mod.rs
be/src/core/src/execution/: mod.rs
be/src/core/src/execution/physical_plan/: config.rs  mod.rs  sql_scan.rs  stream.rs
be/src/core/src/grpc/: service.rs
be/src/proto/: Cargo.toml  build.rs
be/src/proto/src/: common.rs  datafusion.rs  datafusion.serde.rs  execute.rs  lib.rs
be/src/proto/src/bridge/: rb.rs
be/src/proto/src/bytes/: mod.rs  registry.rs
be/src/proto/src/logical_plan/: from_proto.rs  mod.rs  to_proto.rs
be/src/proto/src/physical_plan/: from_proto.rs  mod.rs  to_proto.rs
be/src/proto/src/protos/: execute.rs  from_proto.rs  mod.rs  util.rs
be/src/server/: Cargo.toml
be/src/server/src/: lib.rs
be/src/server/src/grpc/: mod.rs  server.rs  util.rs
be/src/server/src/server/: log.rs  mod.rs
cli/: Cargo.toml  Dockerfile  build.rs  docker.sh  start.sh
cli/src/: main.rs
docs/: guide.md
fe/: Dockerfile  pom.xml  start.sh
fe/cluster/: pom.xml
fe/cluster/src/main/java/com/ccsu/: LeaderService.java
fe/common/: pom.xml
fe/common/src/main/java/com/ccsu/: Result.java
fe/common/src/main/java/com/ccsu/constants/: TimeConstans.java
fe/common/src/main/java/com/ccsu/error/: CommonErrorCode.java  CommonErrorType.java  CommonException.java
fe/common/src/main/java/com/ccsu/event/: Event.java  EventListener.java  EventName.java  EventPublisher.java  EventRegistry.java  LocalEventRegistry.java
fe/common/src/main/java/com/ccsu/io/: IoUtil.java
fe/common/src/main/java/com/ccsu/option/: Option.java  OptionConstants.java  OptionManager.java  OptionStore.java  OptionsClass.java  Scope.java
fe/common/src/main/java/com/ccsu/profile/: JobProfile.java  Phrase.java  ProfileUtil.java  (+2 more)
fe/common/src/main/protobuf/: search_types.proto
fe/grpc/: pom.xml
fe/grpc/src/main/proto/: extend.proto
fe/job-manager/: pom.xml
fe/main/: pom.xml
fe/main/src/main/resources/: config.properties
fe/main/src/test/java/com/ccsu/: AppTest.java
fe/metadata/: pom.xml
fe/metadata/src/main/java/com/ccsu/: ExtendCost.java  MetadataService.java  MetadataServiceImpl.java  MetadataStoreConfig.java  MetadataStoreHolder.java
fe/parser/: pom.xml
fe/parser/src/main/codegen/: config.fmpp
fe/parser/src/main/codegen/includes/: DDLExtends.ftl
fe/parser/src/main/extend/: config.fmpp
fe/parser/src/main/extend/includes/: DDLExtends.ftl
fe/parser/src/test/java/parser/: CalciteParserTest.java  TestCalciteDDLParse.java
fe/planner/: pom.xml
fe/planner/src/main/java/config/: SqlToRelNodeConfig.java
fe/planner/src/main/java/context/: QueryContext.java
fe/planner/src/main/java/convert/: ExtendRelMetadataQuery.java  ExtendSqlToRelConverter.java  RelOptClusterProvider.java  SqlConverter.java  SqlToRelContext.java  VolcanoRelOptCostFactory.java
fe/planner/src/main/java/function/: ExtendReturnTypeInference.java  FunctionBodySignature.java  FunctionType.java
fe/planner/src/main/java/function/registry/: FunctionRegistry.java  FunctionRegistryManager.java  SystemFunctionRegistry.java
fe/planner/src/main/java/function/signature/: FunctionTypeSignature.java  HierarchyFunctionTypeSignature.java  MultiFunctionTypeSignature.java  ReferenceFunctionTypeSignature.java  SimpleFunctionTypeSignature.java
fe/planner/src/main/java/handler/: CreateCatalogHandler.java  ExplainHandler.java  HandlerUtil.java  QueryPlanHandler.java  QueryPlanResult.java  RefreshTableHandler.java  SetOptionHandler.java  ShowCatalogHandler.java  ShowColumnsHandler.java  ShowCreateCatalogHandler.java  ShowProfileHandler.java  ShowSchemasHandler.java  ShowTablesHandler.java  SqlHandler.java  Void.java
fe/planner/src/main/java/observer/: JobObserverUtil.java  SqlJobObserver.java
fe/planner/src/main/java/program/: QueryPlannerProgram.java
fe/planner/src/main/java/program/logical/: LogicalHepPlanner.java  LogicalHepProgram.java  LogicalVolcanoPlanner.java  LogicalVolcanoProgram.java
fe/planner/src/main/java/program/physical/: PhysicalVolcanoPlanner.java  PhysicalVolcanoProgram.java
fe/planner/src/main/java/program/program/: RuleBasedProgram.java  RuleOptimizeProgram.java  SequenceRuleBasedProgram.java
fe/planner/src/main/java/program/rule/: AggregateExecutionPlanRule.java  ArrowTypeDeriveProgram.java  DecorateProgram.java  EnumerableSqlScanRule.java  EnumerableValuesRule.java  ExecutionPlanTransformRule.java  ExtendPhysicalRelTransformRule.java  LimitExecutionPlanRule.java  LogicalCoreRules.java  PushDownFilterRule.java  PushDownProjectRule.java  RelDecorrelator.java  RenameProjectRule.java  SearchRemoveProgram.java  SearchRemoveShuttle.java  SourceScanExecutionRule.java
fe/planner/src/main/java/program/util/: PlannerCancelFlag.java  PlannerSetting.java  RexUtils.java
fe/planner/src/main/java/validator/: ExtendSqlValidator.java  UDFOperatorTable.java  ValidatorProvider.java
fe/planner/src/main/proto/: physical_plan.proto
fe/planner/src/test/java/com/ccsu/: TestFixture.java
fe/src/config/: checkstyle.xml  suppressions.xml
fe/web-api/: pom.xml
proto/: cli.proto  datafusion.proto  execute.proto
(+203 files in other folders)
