[package]
name = "be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["core", "proto", "common"]

[workspace.dependencies]
datafusion = "34.0.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
snafu = "0.8.0"
hexa = { path = "core", version = "0.1.0" }
hexa-proto = { path = "proto", version = "0.1.0" }
hexa-common = { path = "common", version = "0.1.0" }