[workspace.package]
name = "be"
version = "0.1.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["src/core", "src/proto", "src/common", "src/server"]

[workspace.dependencies]
datafusion = "36.0.0"
datafusion-common = "36.0.0"
arrow = { version = "50.0.0", features = ["prettyprint"] }
arrow-flight = "50.0.0"

tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.78"
snafu = "0.8.0"

sqlx = "0.7.4"
hexa = { path = "src/core", version = "0.1.0" }
hexa-proto = { path = "src/proto", version = "0.1.0" }
hexa-common = { path = "src/common", version = "0.1.0" }
hexa-server = { path = "src/server", version = "0.1.0" }

prost = "0.11.0"
tonic = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4.34", default-features = false }
object_store = { version = "0.9.0", default-features = false }

tracing = "0.1.40"
tracing-subscriber = {version = "0.3", features = ["std", "fmt", "json", "env-filter"] }

clap = "4.5.4"
