[package]
name = "hexa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = { workspace = true }
tokio = { workspace = true }
# tokio (no TLS)
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "postgres"] }

prost = "0.12"
snafu = {workspace = true}

hexa-proto = { workspace = true }
hexa-common = { workspace = true }
