[package]
name = "hexa-proto"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"
exclude = ["*.proto"]

[dependencies]
prost = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = { workspace = true}
pbjson = { version = "0.6.0" }
arrow = { workspace = true }

datafusion-common = {workspace  =true}
datafusion = { workspace = true }

object_store = { workspace = true }
chrono = { workspace = true }


[build-dependencies]
tonic-build = "0.8.0"
prost-build = "0.12.3"
pbjson-build = "=0.6.2"

