[package]
name = "hexa-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"



[dependencies]

hexa-proto = { workspace = true }
hexa = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }

tonic = { workspace = true }
datafusion = { workspace = true }
arrow-flight = { workspace = true }
mimalloc-rust = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[[bin]]
name = "hexa-be"
path = "src/bin/be.rs"